feat: add half info and style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Asadbek Raimov - Frontend jr.</title>
 </head>
@@ -13,15 +16,14 @@
         <nav class="nav">
             <div class="nav-navbar">
                 <ul class="nav-list" style="color: #fff;">
-                    <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#work">My Works</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#code">Sample Code</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#education"> &lt;<span>Education</span>/&gt;</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">&lt;<span>About Me</span>/&gt;</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#work">&lt;<span>My Works</span>/&gt;</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#code">&lt;<span>Sample Code</span>/&gt;</a></li>
                 </ul>
             </div>
         </nav>
         <aside>
-
         </aside>
         <header class="header">
             <div class="cv-image">
@@ -29,15 +31,63 @@
             </div>
             <div class="cv-header">
                 <div class="cv-title">
-                    <h1>Asadbek <strong>Raimov</strong></h1>
+                    <h1 class="main-title"><span class="title-spn">Asadbek</span> Raimov</h1>
                     <span class="cv-title-span"></span>
                     <p class="cv-title-job">Beginner Frontend Developer</p>
                 </div>
             </div>
         </header>
 
-        <main>
+        <main class="main">
+            <div class="left-main">
+                <div class="about-me">
+                    <h2 class="scnd-title about-header">About Me <span class="header-spn"></span></h2>
+                    <p>I am a junior Fullstack Developer from Tashkent. I have a yearexperience in the field of Backend and Frontend developing. My dream is developing IT jobs in Uzbekistan and building a greatcorporation like Google! I have chosen my future job so I will do mybest in order to make my dream real!</p>
+                </div>
+                <div class="contact-info">
+                    <h2 class="scnd-title contact-header">Contact Info <span class="header-spn"></span></h2>
+                    <address>
+                        <ul class="contact-list">
+                            <li><span>Email: &nbsp</span> <a class="cntct-link" href="mailto:asadbekraimov642@gmail.com">asadbekraimov642@gmail.com</a></li>
+                            <li><span>LinkedIn: &nbsp</span> <a class="cntct-link" href="https://www.linkedin.com/in/asadbek-raimov-b700881ba/">Asadbek Raimov</a></li>
+                            <li> <span>Telegram: &nbsp</span> @freelanceall</li>
+                            <li><span>Discord username: &nbsp</span> raimovasad#0827</li>
+                       </ul>
+                    </address>
+                </div>
 
+                <div class="hobbies">
+                    <ul class="hobbies-list">
+                        <li class="hobbies-item">
+                            <span class="hobbies-ico">
+
+                            </span>
+                            <p>Wrestling</p>
+                        </li>
+                        <li class="hobbies-item">
+                            <span class="hobbies-ico">
+
+                            </span>
+                            <p>Reading</p>
+                        </li>
+                        <li class="hobbies-item">
+                            <span class="hobbies-ico">
+
+                            </span>
+                            <p>Travel</p>
+                        </li>
+                        <li class="hobbies-item">
+                            <span class="hobbies-ico">
+
+                            </span>
+                            <p>Films</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="right-main">
+
+            </div>
         </main>
         <footer></footer>
     </div>
