--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                     <h2 class="scnd-title contact-header">Contact Info <span class="header-spn"></span></h2>
                     <address>
                         <ul class="contact-list">
-                            <li><span>Email: &nbsp</span> <a class="cntct-link" href="mailto:asadbekraimov642@gmail.com">asadbekraimov642@gmail.com</a></li>
-                            <li><span>LinkedIn: &nbsp</span> <a class="cntct-link" href="https://www.linkedin.com/in/asadbek-raimov-b700881ba/">Asadbek Raimov</a></li>
-                            <li> <span>Telegram: &nbsp</span> @freelanceall</li>
-                            <li><span>Discord username: &nbsp</span> raimovasad#0827</li>
+                            <li><span>Email: </span> <a class="cntct-link" href="mailto:asadbekraimov642@gmail.com">asadbekraimov642@gmail.com</a></li>
+                            <li><span>LinkedIn: </span> <a class="cntct-link" href="https://www.linkedin.com/in/asadbek-raimov-b700881ba/">Asadbek Raimov</a></li>
+                            <li> <span>Telegram: </span> @freelanceall</li>
+                            <li><span>Discord username: </span> raimovasad#0827</li>
                        </ul>
                     </address>
                 </div>
